--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -40,6 +40,10 @@
     </mat-table>
     <mat-paginator #paginator [pageSize]="10" [length]="count" (page)="onNavigate($event)">
     </mat-paginator>
+    <button mat-button (click)="create()">
+      <mat-icon>add</mat-icon>
+      Create new
+    </button>
     <div *ngIf="current">
       <div class="container">
         <h1>Details of the todo "{{current.ID}}"</h1>
